# hbs2

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO  cabal.project  code-of-conduct  db-pipe.cabal  fixer-config-example.scm  flake.nix  hie.yaml  weeder.toml
examples/raft-algo/: raft-algo.cabal
examples/raft-algo/lib/RaftAlgo/: Proto.hs
examples/raft-algo/test/: RaftAlgoProtoTest.hs
examples/refchan-qblf/: refchan-qblf.cabal
examples/refchan-qblf/app/: Main.hs  RefChanQBLFMain.hs
examples/refchan-qblf/config/: default  second  third
examples/refchan-qblf/data/: head.dsl  owner.key  peer1.key  peer2.key  wallet1.key  wallet2.key
examples/refchan-qblf/lib/QBLF/: Proto.hs
examples/refchan-qblf/test/: RefChanQBLFProtoTest.hs
fixme-new/: README.md  fixme.cabal
fixme-new/app/: FixmeMain.hs
fixme-new/examples/: config  config-fixme-new-config
fixme-new/lib/: Fixme.hs
fixme-new/lib/Fixme/: Config.hs  GK.hs  Log.hs  Prelude.hs  Run.hs  RunOld.hs  Scan.hs  State.hs  Types.hs
hbs2/: CHANGELOG.md  Main.hs  hbs2.cabal
hbs2-browser/: CHANGELOG.md  LICENSE  hbs2-browser.cabal
hbs2-browser/assets/css/: custom.css
hbs2-browser/templates/: browser.html
hbs2-cli/: hbs2-cli.cabal
hbs2-cli/app/: Main.hs
hbs2-cli/lib/HBS2/: CLI.hs
hbs2-consensus/: Consensus.hs  hbs2-consensus.cabal  hbs2-git.cabal
hbs2-consensus/lib/HBS2/: Consensus.hs
hbs2-core/: CHANGELOG.md  hbs2-core.cabal
hbs2-core/lib/Dialog/: Client.hs  Core.hs
hbs2-core/lib/HBS2/: Actors.hs  Base58.hs  Clock.hs  Crypto.hs  Defaults.hs  Events.hs  Hash.hs  Merkle.hs  OrDie.hs  Polling.hs  Prelude.hs  ScheduledAction.hs  Storage.hs  Version.hs
hbs2-core/test/: DialogSpec.hs  FakeMessaging.hs  HasProtocol.hs  Main.hs  TestAbstractDispatch.hs  TestActors.hs  TestBlockInfoActor.hs  TestCrypto.hs  TestDerivedKey.hs  TestFakeMessaging.hs  TestFileLogger.hs  TestScheduled.hs  TestUniqProtoId.hs
hbs2-fixer/: hbs2-fixer.cabal  real-config-example
hbs2-fixer/app/: Main.hs
hbs2-fixer/examples/: fixer-config-example.scm  getenv.scm  home.scm  listen.scm  runeval.scm  watch.scm
hbs2-git/: CHANGELOG.md  hbs2-git.cabal
hbs2-git-dashboard/: hbs2-git-dashboard.cabal
hbs2-git-dashboard/app/: GitDashBoard.hs
hbs2-git/examples/config/: encrypted-ref  encrypted-ref-2
hbs2-git/git-hbs2/: GitRemoteMain.hs  GitRemotePush.hs  GitRemoteTypes.hs  Main.hs  RunShow.hs
hbs2-git/git-hbs2-http/: GitHttpDumbMain.hs
hbs2-git/git-hbs2-subscribe/: Main.hs
hbs2-git/git-hbs2/HBS2Git/: App.hs  Config.hs  Export.hs  Import.hs  ListRefs.hs  State.hs  Types.hs
hbs2-git/git-remote-hbs2/: Main.hs
hbs2-git/hbs2-git-dashboard/: GitDashBoard.hs
hbs2-git/hbs2-git-oracle/: repo.sql
hbs2-git/hbs2-git-oracle/app/: Main.hs
hbs2-git/hbs2-git-oracle/examples/: oracle-refchan.dsl
hbs2-git/lib/HBS2Git/: Alerts.hs  Annotations.hs  App.hs  Config.hs  Encryption.hs  Evolve.hs  Export.hs  GitRepoLog.hs  Import.hs  KeysCommand.hs  KeysMetaData.hs  ListRefs.hs  Prelude.hs  PrettyStuff.hs  Push.hs  State.hs  Tools.hs  Types.hs  Update.hs
hbs2-git/reposync/: ReposyncMain.hs
hbs2-git3/: hbs2-git3.cabal
hbs2-git3/app/: Daemon.hs  GitRemoteHelper.hs  Main.hs
hbs2-keyman/hbs2-keyman/: Main.hs  hbs2-keyman.cabal
hbs2-keyman/hbs2-keyman-direct-lib/: hbs2-keyman-direct-lib.cabal
hbs2-metaindex/: hbs2-metaindex.cabal
hbs2-metaindex/lib/HBS2/: MetaIndex.hs
hbs2-peer/: CHANGELOG.md  hbs2-peer.cabal
hbs2-peer/app/: BlockDownload.hs  BlockDownloadNew.hs  BlockHttpDownload.hs  Bootstrap.hs  Brains.hs  BrainyPeerLocator.hs  Browser.hs  ByPassWorker.hs  CheckBlockAnnounce.hs  CheckMetrics.hs  CheckPeer.hs  DetectGateway.hs  DispatchProxy.hs  DownloadMon.hs  DownloadQ.hs  EncryptionKeys.hs  Fetch.hs  HttpWorker.hs  LWWRef.hs  Log.hs  Logger.hs  MailboxProtoWorker.hs  Monkeys.hs  Multicast.hs  PeerConfig.hs  PeerInfo.hs  PeerLogger.hs  PeerMain.hs  PeerMeta.hs  PeerTypes.hs  PokePostponed.hs  ProxyMessaging.hs  RPC.hs  RPC2.hs  RefChan.hs  RefChanNotifyLog.hs  RefLog.hs  SendBlockAnnounce.hs  SignalHandlers.hs  Watchdogs.hs
hbs2-peer/app/Browser/: Root.hs
hbs2-peer/app/CLI/: Common.hs  LWWRef.hs  Mailbox.hs  RefChan.hs
hbs2-peer/app/PeerMain/: DialogCliCommand.hs  PeerDialog.hs
hbs2-peer/app/RPC2/: API.hs  Announce.hs  ByPassStat.hs  Die.hs  Downloads.hs  Fetch.hs  LWWRef.hs  LogLevel.hs  Mailbox.hs  Peer.hs  Peers.hs  PerformGC.hs  PexInfo.hs  Ping.hs  Poke.hs  Poll.hs  Probes.hs  RefChan.hs  RefLog.hs  Storage.hs  Types.hs  Unix.hs
hbs2-peer/examples/config/: config
hbs2-peer/test/: TestSuite.hs
hbs2-qblf/: CHANGELOG.md  hbs2-qblf.cabal
hbs2-share/: CHANGELOG.md  hbs2-share.cabal
hbs2-share/app/: Main.hs
hbs2-storage-simple/: CHANGELOG.md  LICENSE  hbs2-storage-simple.cabal
hbs2-storage-simple/benchmarks/: Main.hs
hbs2-storage-simple/test/: Main.hs  TestCompactStorage.hs  TestSimpleStorage.hs
hbs2-sync/: LICENSE  hbs2-sync.cabal
hbs2-sync/app/: Main.hs
hbs2-sync/src/HBS2/: Sync.hs
hbs2-tests/: hbs2-tests.cabal  hie.yaml
hbs2-tests/integrational/: smoke-test-1.ss  tmux.ss  wtf.ss
hbs2-tests/refchan-dummy-validator/: DummyValidatorMain.hs
hbs2-tests/repo-export/: RepoExportMain.hs
hbs2-tests/test/: CheckUnixMessaging.hs  HmapMain.hs  Main.hs  Peer2Main.hs  PeerMain.hs  PrototypeGenericService.hs  StorageServiceTest.hs  TestACB.hs  TestChunkWriter.hs  TestConcurrentWrite.hs  TestEnc.hs  TestLSMWrite.hs  TestLogger.hs  TestMergeLimits.hs  TestMisc.hs  TestPipeMessaging.hs  TestRawTx.hs  TestRefChanNotify.hs  TestRefSet.hs  TestSKey.hs  TestSaltine.hs  TestScripts.hs  TestTCP.hs  TestTCPNet.hs  TestUDP.hs  TestUNIX.hs  TestWalkMerkleConditional.hs  TestWalkMerkleTreeCorner.hs  TestWalkTreeMeta.hs  TopSortCommits.hs
hbs2-tests/test/notify-unix/: Main.hs
hbs2-tests/test/playground/: Main.hs
hbs2/examples/: test-group.cfg
miscellaneous/suckless-conf/: suckless-conf.cabal
miscellaneous/suckless-conf/bf6/: Main.hs
miscellaneous/suckless-conf/examples/: css.ss  page.ss  templ.ss
miscellaneous/suckless-conf/t/: just-comment
(+472 files in other folders)
