cabal-version:      3.0
name:               fixme-new
version:            0.24.1.2
synopsis: reimplemented fixme
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


  build-depends:
        hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-keyman
      , hbs2-git
      , db-pipe
      , suckless-conf >= 0.1.2.6
      , fuzzy-parse

      , aeson
      , aeson-pretty
      , attoparsec
      , atomic-write
      , bytestring
      , binary
      , containers
      , directory
      , exceptions
      , filepath
      , filepattern
      , generic-lens
      , generic-deriving
      , interpolatedstring-perl6
      , memory
      , microlens-platform
      , mtl
      , safe
      , serialise
      , scientific
      , streaming
      , stm
      , text
      , temporary
      , time
      , timeit
      , transformers
      , typed-process
      , unordered-containers
      , unliftio
      , unliftio-core
      , zlib
      , prettyprinter
      , prettyprinter-ansi-terminal
      , random
      , vector
      , unix


library
    import:           shared-properties

    exposed-modules:
      Fixme
      Fixme.Config
      Fixme.Run
      Fixme.Types
      Fixme.Prelude
      Fixme.State
      Fixme.Scan
      Fixme.Scan.Git.Local

    build-depends:    base
                    , base16-bytestring
                    , binary
                    , unix

    hs-source-dirs:  lib


executable fixme-new
    import:           shared-properties
    main-is:          FixmeMain.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, fixme-new, hbs2-core, hbs2-peer, hbs2-git
        , binary
        , vector
        , optparse-applicative

    hs-source-dirs:   app
    default-language: GHC2021


