cabal-version:      3.0
name:               hbs2-browser
version:            0.24.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:
      HBS2.Peer.Browser.Assets

    -- other-modules:
    -- other-extensions:
    build-depends:    base, file-embed

    hs-source-dirs:   lib
    default-language: GHC2021
