cabal-version:      3.0
name:               hbs2-git
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -Wno-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


  build-depends: hbs2-core
               , aeson
               , async
               , base16-bytestring
               , bytestring
               , containers
               , cryptonite
               , directory
               , filepath
               , memory
               , microlens-platform
               , mtl
               , prettyprinter
               , prettyprinter-ansi-terminal
               , safe
               , serialise
               , suckless-conf
               , text
               , transformers
               , typed-process
               , uniplate
               , hashable
               , sqlite-simple
               , stm
               , unordered-containers
               , filelock
               , http-conduit
               , exceptions

library
    import:           shared-properties

    exposed-modules:
      HBS2.Consensus

    -- other-modules:
    -- other-extensions:
    build-depends:    base
                   , exceptions
                   , http-types

    hs-source-dirs:   lib
    default-language: Haskell2010

executable consensus-kv
    import:           shared-properties
    main-is:          Consensus.hs

    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:
      RunShow

    -- other-extensions:
    build-depends:
        base, hbs2-git
      , optparse-applicative
      , http-types

    hs-source-dirs:   git-hbs2
    default-language: Haskell2010


executable git-remote-hbs2
    import:           shared-properties
    main-is:          GitRemoteMain.hs

    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:
      GitRemoteTypes
      GitRemotePush

    -- other-extensions:
    build-depends:
        base, hbs2-git
      , async
      , attoparsec
      , optparse-applicative
      , unix
      , unliftio
      , terminal-progress-bar
      , http-types

    hs-source-dirs:   git-hbs2
    default-language: Haskell2010

