cabal-version:      3.0
name:               hbs2-core
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies



library
    import:           shared-properties

    exposed-modules:
                      HBS2.Actors
                    , HBS2.Clock
                    , HBS2.Data.Types
                    , HBS2.Data.Types.Refs
                    , HBS2.Defaults
                    , HBS2.Hash
                    , HBS2.Merkle
                    , HBS2.Net.Messaging
                    , HBS2.Net.Messaging.Fake
                    , HBS2.Net.PeerLocator
                    , HBS2.Net.PeerLocator.Static
                    , HBS2.Net.Proto
                    , HBS2.Net.Proto.Actors.BlockInfo
                    , HBS2.Prelude
                    , HBS2.Prelude.Plated
                    , HBS2.Storage


    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                     , aeson
                     , async
                     , base58-bytestring
                     , binary
                     , bytestring
                     , cache
                     , cborg
                     , clock
                     , containers
                     , cryptonite
                     , deepseq
                     , hashable
                     , interpolatedstring-perl6
                     , memory
                     , microlens-platform
                     , prettyprinter
                     , safe
                     , serialise
                     , stm
                     , stm-chans
                     , text
                     , uniplate

    hs-source-dirs:   lib
    default-language: Haskell2010


test-suite test
    import:           shared-properties
    default-language: Haskell2010

    other-modules:  TestFakeMessaging
                  , TestActors
                  , TestBlockInfoActor
                  , TestUniqProtoId
                  , FakeMessaging
                  , HasProtocol

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.15.1.0, hbs2-core
        , async
        , bytestring
        , cache
        , containers
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , tasty
        , tasty-hunit
        , transformers
        , uniplate
        , vector
        , simple-logger




