cabal-version:      3.0
name:               hbs2-core
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -- -prof -fprof-auto
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies



library
    import:           shared-properties

    exposed-modules:
                      HBS2.Actors
                    , HBS2.Actors.Peer
                    , HBS2.Base58
                    , HBS2.Clock
                    , HBS2.Data.Detect
                    , HBS2.Data.Types
                    , HBS2.Data.Types.Crypto
                    , HBS2.Data.Types.Refs
                    , HBS2.Defaults
                    , HBS2.Events
                    , HBS2.Hash
                    , HBS2.Merkle
                    , HBS2.Net.Auth.AccessKey
                    , HBS2.Net.Auth.Credentials
                    , HBS2.Net.IP.Addr
                    , HBS2.Net.Messaging
                    , HBS2.Net.Messaging.Fake
                    , HBS2.Net.Messaging.UDP
                    , HBS2.Net.Messaging.TCP
                    , HBS2.Net.PeerLocator
                    , HBS2.Net.PeerLocator.Static
                    , HBS2.Net.Proto
                    , HBS2.Net.Proto.BlockAnnounce
                    , HBS2.Net.Proto.BlockChunks
                    , HBS2.Net.Proto.BlockInfo
                    , HBS2.Net.Proto.Definition
                    , HBS2.Net.Proto.Peer
                    , HBS2.Net.Proto.PeerAnnounce
                    , HBS2.Net.Proto.PeerExchange
                    , HBS2.Net.Proto.PeerMeta
                    , HBS2.Net.Proto.Sessions
                    , HBS2.Net.Proto.RefLog
                    , HBS2.Net.Proto.Types
                    , HBS2.OrDie
                    , HBS2.Prelude
                    , HBS2.Prelude.Plated
                    , HBS2.Storage
                    , HBS2.System.Logger.Simple
                    , HBS2.System.Logger.Simple.Class


    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , async
                    , attoparsec
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cache
                    , cborg
                    , clock
                    , containers
                    , cryptonite
                    , deepseq
                    , directory
                    , fast-logger
                    , filelock
                    , filepath
                    , hashable
                    , interpolatedstring-perl6
                    , iproute
                    , memory
                    , microlens-platform
                    , mtl
                    , murmur-hash
                    , network
                    , network-multicast
                    , network-simple
                    , network-byte-order
                    , prettyprinter
                    , random
                    , random-shuffle
                    , resourcet
                    , safe
                    , saltine ^>=0.2.0.1
                    , serialise
                    , sockaddr
                    , split
                    , stm
                    , stm-chans
                    , streaming
                    , suckless-conf
                    , temporary
                    , text
                    , transformers
                    , uniplate
                    , unordered-containers
                    , unliftio


    hs-source-dirs:   lib
    default-language: Haskell2010


test-suite test
    import:           shared-properties
    default-language: Haskell2010

    other-modules:  TestFakeMessaging
                  , TestActors
                  -- , TestUniqProtoId
                  , FakeMessaging
                  , HasProtocol

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base, hbs2-core
        , async
        , bytestring
        , cache
        , containers
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , transformers
        , uniplate
        , vector
        , simple-logger




