cabal-version:      3.0
name:               hbs2-core
version:            0.1.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -- -fprint-potential-instances
        -- -prof -fprof-auto
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedLabels
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies
                     , TemplateHaskell
                     , ViewPatterns



library
    import:           shared-properties

    exposed-modules:
                      HBS2.Actors
                    , HBS2.Actors.Peer
                    , HBS2.Actors.Peer.Types
                    , HBS2.Base58
                    , HBS2.Clock
                    , HBS2.Crypto
                    , HBS2.ScheduledAction
                    , HBS2.Data.KeyRing
                    , HBS2.Data.Detect
                    , HBS2.Data.Types
                    , HBS2.Data.Types.Peer
                    , HBS2.Data.Types.Refs
                    , HBS2.Data.Types.SignedBox
                    , HBS2.Data.Types.EncryptedBox
                    , HBS2.Data.Types.SmallEncryptedBlock
                    , HBS2.Data.Bundle
                    , HBS2.Defaults
                    , HBS2.Events
                    , HBS2.Polling
                    , HBS2.Hash
                    , HBS2.Merkle
                    , HBS2.Net.Auth.Schema
                    , HBS2.Net.Auth.GroupKeyAsymm
                    , HBS2.Net.Auth.GroupKeySymm
                    , HBS2.Net.Auth.Credentials
                    , HBS2.Net.Auth.Credentials.Sigil
                    , HBS2.Net.IP.Addr
                    , HBS2.Net.Messaging
                    , HBS2.Net.Messaging.Fake
                    , HBS2.Net.Messaging.UDP
                    , HBS2.Net.Messaging.TCP
                    , HBS2.Net.Messaging.Unix
                    , HBS2.Net.Messaging.Stream
                    , HBS2.Net.Messaging.Encrypted.RandomPrefix
                    , HBS2.Net.Messaging.Encrypted.ByPass
                    , HBS2.Net.PeerLocator
                    , HBS2.Net.PeerLocator.Static
                    , HBS2.Net.Proto
                    , HBS2.Net.Proto.Sessions
                    , HBS2.Net.Proto.Service
                    , HBS2.Net.Proto.Notify
                    , HBS2.Net.Proto.Types
                    , HBS2.OrDie
                    , HBS2.Prelude
                    , HBS2.Prelude.Plated
                    , HBS2.Storage
                    , HBS2.Storage.Operations.Class
                    , HBS2.Storage.Operations.ByteString
                    , HBS2.Storage.Operations.Missed
                    , HBS2.System.Logger.Simple
                    , HBS2.System.Logger.Simple.ANSI
                    , HBS2.System.Logger.Simple.Class
                    , HBS2.System.Dir
                    , HBS2.Net.Dialog.Core
                    , HBS2.Net.Dialog.Client
                    , HBS2.Net.Dialog.Helpers.List
                    , HBS2.Net.Dialog.Helpers.Streaming
                    , HBS2.Misc.PrettyStuff
                    , HBS2.Version


    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , async
                    , attoparsec
                    , base16-bytestring
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cache
                    , cborg
                    , clock
                    , constraints
                    , containers
                    , cryptonite
                    , data-default
                    , deepseq
                    , directory
                    , fast-logger
                    , filelock
                    , filepath
                    , filepattern
                    , exceptions
                    , generic-lens
                    , hashable
                    , heaps
                    , interpolatedstring-perl6
                    , iproute
                    , memory
                    , microlens-platform
                    , mtl
                    , murmur-hash
                    , time
                    , network
                    , network-multicast
                    , network-simple
                    , network-byte-order
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , mwc-random
                    , random
                    , random-shuffle
                    , resourcet
                    , safe
                    , safe-exceptions
                    , saltine ^>=0.2.0.1
                    , serialise
                    , sockaddr
                    , split
                    , stm
                    , stm-chans
                    , string-conversions
                    , streaming
                    , string-conversions
                    , suckless-conf
                    , template-haskell
                    , temporary
                    , text
                    , time
                    , transformers
                    , uniplate
                    , unordered-containers
                    , unliftio
                    , unliftio-core
                    , zlib


    hs-source-dirs:   lib
    default-language: Haskell2010


test-suite test
    import:           shared-properties
    default-language: Haskell2010

    other-modules:  TestFakeMessaging
                  , TestActors
                  , TestFileLogger
                  -- , TestUniqProtoId
                  , FakeMessaging
                  , HasProtocol
                  , DialogSpec
                  , TestScheduled
                  , TestDerivedKey

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base, hbs2-core
        , async
        , bytestring
        , cache
        , containers
        , directory
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , saltine
        , simple-logger
        , string-conversions
        , filepath
        , temporary
        , unliftio
        , resourcet


