cabal-version:      3.0
name:               hbs2-git-dashboard
version:            0.24.1.2
license:            BSD-3-Clause
author:             Dmitry Zuikov
category:           System
build-type:         Simple

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -fno-warn-unused-matches
        -fno-warn-name-shadowing
        -O2

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


library hbs2-git-dashboard-assets
  import:           shared-properties

  build-depends:
      base
    , bytestring
    , interpolatedstring-perl6
    , file-embed
    , lucid
    , text

  exposed-modules:
      HBS2.Git.Web.Assets

  hs-source-dirs:   hbs2-git-dashboard-assets

  default-language: GHC2021


library hbs2-git-dashboard-core
  import:           shared-properties

  build-depends:
      , base

      , hbs2-git-dashboard-assets
      , hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-git
      , hbs2-keyman-direct-lib
      , db-pipe
      , suckless-conf
      , fixme-new

      , aeson
      , atomic-write
      , attoparsec
      , binary
      , bytestring
      , containers
      , deriving-compat
      , directory
      , exceptions
      , filepath
      , filepattern
      , generic-data
      , generic-deriving
      , generic-lens
      , http-types
      , interpolatedstring-perl6
      , lucid
      , lucid-htmx
      , memory
      , microlens-platform
      , mtl
      , network-uri
      , optparse-applicative
      , pandoc
      , prettyprinter
      , prettyprinter-ansi-terminal
      , random
      , safe
      , scotty >= 0.21
      , serialise
      , skylighting
      , skylighting-core
      , skylighting-lucid
      , stm
      , streaming
      , temporary
      , text
      , time
      , timeit
      , transformers
      , typed-process
      , unix
      , unliftio
      , unliftio-core
      , unordered-containers
      , uri-encode
      , vector
      , wai
      , wai-extra
      , wai-middleware-static
      , wai-middleware-static-embedded
      , zlib

  exposed-modules:
      HBS2.Git.DashBoard.Prelude
      HBS2.Git.DashBoard.Types
      HBS2.Git.DashBoard.State
      HBS2.Git.DashBoard.State.Commits
      HBS2.Git.DashBoard.State.Index
      HBS2.Git.DashBoard.State.Index.Channels
      HBS2.Git.DashBoard.State.Index.Peer
      HBS2.Git.DashBoard.Manifest
      HBS2.Git.DashBoard.Fixme
      HBS2.Git.Web.Html.Types
      HBS2.Git.Web.Html.Parts.TopInfoBlock
      HBS2.Git.Web.Html.Parts.Issues.Sidebar
      HBS2.Git.Web.Html.Markdown
      HBS2.Git.Web.Html.Root
      HBS2.Git.Web.Html.Issue
      HBS2.Git.Web.Html.Repo
      HBS2.Git.Web.Html.Fixme

  hs-source-dirs:   hbs2-git-dashboard-core

  default-language: GHC2021


executable hbs2-git-dashboard
    import:           shared-properties
    main-is:          GitDashBoard.hs

    ghc-options:
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:

    -- other-extensions:
    build-depends:
          base

        , hbs2-core
        , hbs2-git
        , hbs2-git-dashboard-assets
        , hbs2-git-dashboard-core
        , hbs2-peer
        , suckless-conf
        , db-pipe

        , binary
        , bytestring
        , deriving-compat
        , directory
        , filepath
        , generic-data
        , generic-deriving
        , http-types
        , lucid
        , lucid-htmx
        , mtl
        , network-uri
        , optparse-applicative
        , pandoc
        , random
        , scotty >= 0.21
        , skylighting
        , skylighting-core
        , skylighting-lucid
        , stm
        , temporary
        , text
        , transformers
        , typed-process
        , unordered-containers
        , vector
        , wai
        , wai-extra
        , wai-middleware-static
        , wai-middleware-static-embedded

    hs-source-dirs:
      app

    default-language: GHC2021


